@@ -82,6 +82,8 @@ Release 0.9.11
 - properly resolve plugin resources from apps/xxx apps
 - tinyMCE: add support for multiple instances per page
 - xinha: add support for multiple instances per page
+- templates: shipping: display providers with errors, display icon if
+  available
 
 Release 0.9.10
 - restructure store and admin code into separate apps with most of the store
